<resources>
    <string name="default_web_client_id">669111898592-abcdefghijklmnopqrstuvwxyz123456.apps.googleusercontent.com</string>
    <string name="app_name">DogiDog</string>
    <string name="prefs_file">key_sesion</string>
    <string name="title_activity_principal">PrincipalActivity</string>
    <string name="titulo_mascotas">Mascotas</string>
    <string name="titulo_mapa">Mapa</string>
    <string name="titulo_recordatorios">Recordatorios</string>
    <string name="titulo_logros">Logros</string>
    <string name="titulo_dogibot">Dogibot</string>
    <string name="sinInfo">---</string>
    <string name="api_key">AIzaSyBLhY2MeljvnCLGRfLbc_R24l73oGIaz8U</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <array name="mascotas"> </array>
    <string name="conexion">http://10.0.2.2:8080/dogidog/</string>
    <string-array name="raza_array">
        <item>Pastor Alemán</item>
        <item>Labrador Retriever</item>
        <item>Golden Retriever</item>
        <item>Bulldog Francés</item>
        <item>Beagle</item>
        <item>Poodle</item>
        <item>Chihuahua</item>
        <item>Dálmata</item>
        <item>Boxer</item>
        <item>Husky Siberiano</item>
        <item>Border Collie</item>
        <item>Shiba Inu</item>
        <item>San Bernardo</item>
        <item>Pug</item>
    </string-array>

    <!-- Array para el Spinner de períodos -->
    <string-array name="periodos">
        <item>Mensual</item>
        <item>Anual</item>
    </string-array>

    <!-- Array para el Spinner de períodos -->
    <string-array name="tipos">
        <item>Mensual</item>
        <item>Anual</item>
    </string-array>

    <!-- Array para el Spinner de años -->
    <string-array name="años">
        <item>2025</item>
        <item>2024</item>
        <item>2023</item>
    </string-array>

    <string-array name="opciones">
        <item>Título</item>
        <item>Descripción</item>
        <item>Tipo</item>
        <item>Fecha</item>
    </string-array>

    <string name="mapbox_access_token">YOUR_MAPBOX_API_KEY</string>
</resources>