<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <item
        android:id="@+id/navigation_dogibot"
        android:icon="@drawable/bordercollie"
        android:title="@string/titulo_dogibot"/>

    <item
        android:id="@+id/navigation_mapa"
        android:icon="@drawable/place_24"
        android:title="@string/titulo_mapa"/>

    <item
        android:id="@+id/navigation_mascotas"
        android:icon="@drawable/pets_24"
        android:title="@string/titulo_mascotas"/>

    <item
        android:id="@+id/navigation_notificaciones"
        android:icon="@drawable/notifications_24"
        android:title="@string/titulo_recordatorios"/>

    <item
        android:id="@+id/navigation_logros"
        android:icon="@drawable/baseline_star_24"
        android:title="@string/titulo_logros"/>



</menu>